[package]
name = "mutsuki-cli-host"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ratatui = "0.30.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "77eab05a7e84daac0e66b7e06e19bedb29cf9d3a" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "77eab05a7e84daac0e66b7e06e19bedb29cf9d3a" }
